syntax = "proto3";

package auth;

option go_package = "/profile_register_service";

service ProfileRegisterService {
  rpc ProfileRegister (Request) returns (Response);
}

message Response {
    int32 code = 1;
    string message = 2;
}
message Request {
    string UserName = 1;
    int32 AccountInfoId = 2;
}


//protoc --go_out=. --go-grpc_out=. profile_register_service.proto


